# DIS-CO

./: README.md  project.toml  pyproject.toml  requirements.txt
Code/: metrics_utils.py  movie_guess_utils.py  run_metrics.py  run_movie_guess.py
Replicate_Results/1917/: 1917_results_main_Llama-3.2-90B-Vision-Instruct_single_caption.xlsx  1917_results_main_Llama-3.2-90B-Vision-Instruct_single_image.xlsx  1917_results_main_Qwen2-VL-72B-Instruct_single_caption.xlsx  1917_results_main_Qwen2-VL-72B-Instruct_single_image.xlsx  1917_results_main_gemini-1.5-pro_single_caption.xlsx  1917_results_main_gemini-1.5-pro_single_image.xlsx  1917_results_main_gpt-4o-2024-08-06_single_caption.xlsx  1917_results_main_gpt-4o-2024-08-06_single_image.xlsx  1917_results_neutral_Llama-3.2-90B-Vision-Instruct_single_caption.xlsx  1917_results_neutral_Llama-3.2-90B-Vision-Instruct_single_image.xlsx  1917_results_neutral_Qwen2-VL-72B-Instruct_single_caption.xlsx  1917_results_neutral_Qwen2-VL-72B-Instruct_single_image.xlsx  1917_results_neutral_gemini-1.5-pro_single_caption.xlsx  1917_results_neutral_gemini-1.5-pro_single_image.xlsx  1917_results_neutral_gpt-4o-2024-08-06_single_caption.xlsx  1917_results_neutral_gpt-4o-2024-08-06_single_image.xlsx
Replicate_Results/21_Jump_Street/: 21_Jump_Street_results_main_Llama-3.2-90B-Vision-Instruct_single_caption.xlsx  21_Jump_Street_results_main_Llama-3.2-90B-Vision-Instruct_single_image.xlsx  21_Jump_Street_results_main_Qwen2-VL-72B-Instruct_single_caption.xlsx  21_Jump_Street_results_main_Qwen2-VL-72B-Instruct_single_image.xlsx  21_Jump_Street_results_main_gemini-1.5-pro_single_caption.xlsx  21_Jump_Street_results_main_gemini-1.5-pro_single_image.xlsx  21_Jump_Street_results_main_gpt-4o-2024-08-06_single_caption.xlsx  21_Jump_Street_results_main_gpt-4o-2024-08-06_single_image.xlsx  21_Jump_Street_results_neutral_Qwen2-VL-72B-Instruct_single_caption.xlsx  (+7 more)
(+1568 files in other folders)
